// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-h3sobf-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-f5ome0-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1pzmux7-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1hyuh0l-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-wvpv7w-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-1g2cn2b-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-c7m30k-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <button
      class="css-4ds05y-Button e1iqivjq3"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Field field 1`] = `
<label
  class="css-1n4tt73-Wrapper evz11jd0"
>
  <span
    class="css-1e2pl7n-Label evz11jd1"
  >
    <span>
      label
    </span>
  </span>
  <select
    class="css-bsjfx3-Select e1iqivjq1"
    size="1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</label>
`;

exports[`Storyshots Components|Form/Input alignment 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-szkw5p-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-1y2wvrw-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-16q8oyb-Input e1iqivjq0"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input sizes 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-yli1rb-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-1isdddd-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-16q8oyb-Input e1iqivjq0"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input validations 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-1ixcpjc-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-7fui90-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-13lwlbq-Input e1iqivjq0"
      value="text"
    />
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <input
      class="css-16q8oyb-Input e1iqivjq0"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select alignment 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <select
    class="css-1sgistt-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-fxcaf9-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-170lhp0-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-bsjfx3-Select e1iqivjq1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-1mq6ser-Select e1iqivjq1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <select
      class="css-170lhp0-Select e1iqivjq1"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <select
    class="css-hxwf21-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-1pbuugy-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-p4579u-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-170lhp0-Select e1iqivjq1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="end"
      class="css-ok7c03-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="center"
      class="css-djty3k-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      align="start"
      class="css-pul98m-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-fpmx1h-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-5rqdpj-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-pul98m-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
<div
  class="css-1wesixd-Container ecq4n7c0"
>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-vcj5vs-Textarea e1iqivjq2"
      style="height:0"
      valid="error"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-1orv7tn-Textarea e1iqivjq2"
      style="height:0"
      valid="warn"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-1gb1gub-Textarea e1iqivjq2"
      style="height:0"
      valid="valid"
    >
      text
    </textarea>
  </div>
  <div
    class="css-1nttea4-Flexed e1cifqpq0"
  >
    <textarea
      class="css-pul98m-Textarea e1iqivjq2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;
